--- a/playground/webpack-next/src/pages/_app.css
+++ b/playground/webpack-next/src/pages/_app.css
@@ -119,6 +119,11 @@ kbd {
 
 .card {
   padding: 2em;
+  zoom: 2;
+}
+
+.card > div {
+  zoom: 0.5;
 }
 
 .read-the-docs {
